--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                     <li class="fourth-list">
                         <div class="overlay-div">
                         <img src="./images/img5.jpg" alt="img" width="360" class="img">
-                            <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                            <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -279,7 +279,7 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img6.jpg" alt="img" width="360" class="img">
-                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                             <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -288,7 +288,7 @@
                     </li>
                     <li class="fourth-list">
                          <div class="overlay-div">
-                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                             <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -303,7 +303,7 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img8.jpg" alt="img" width="360" class="img">
-                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                             <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -317,7 +317,7 @@
                     <li class="fourth-list">
                          <div class="overlay-div">
                         <img src="./images/img9.jpg" alt="img" width="360" class="img">
-                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                             <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -330,7 +330,7 @@
                     </li>
                     <li class="fourth-list">
                          <div class="overlay-div">
-                             <p> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                             <p class="overlay"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                                </div>
                         <div class="div">
                             <h3 class="list-title">Cashless Payment</h3>
@@ -358,28 +358,28 @@
             <div>
                 <p class="footer-text">Social media</p>
                 <ul class="social-media-list">
-                    <li class="social-li">
+                    <li class="social-list-li">
                                      <a href="" class="social-menu-links">
                                         <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-instagram"></use>
                                         </svg>
                                          </a>
                                    </li>
-                                   <li class="social-li">
+                                   <li class="social-list-li">
                                        <a href="" class="social-menu-links">
                                          <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-twitter"></use>
                                         </svg>
                                             </a>
                                         </li>
-                                       <li class="social-li">
+                                       <li class="social-list-li">
                                           <a href="" class="social-menu-links">
                                          <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-facebook"></use>
                                         </svg>
                                                </a>
                                             </li>
-                                           <li class="social-li">
+                                           <li class="social-list-li">
                                                <a href="" class="social-menu-links">
                                          <svg  class="social-svg" width="24" height="24">
                                             <use href="./images/icons.svg#icon-linkedin"></use>
