--- a/index.html
+++ b/index.html
@@ -327,48 +327,119 @@
         </section>
     </main>
     <footer class="page-footer">
-        <div class="container flex">
-            <div class="footer-div">
+    <div class="container flex">
+        <div class="footer-div">
             <a class="second-logotype second-class" href="./index.html">
                 Web<span class="footer-logotype-span">Studio</span>
             </a>
             <p class="logotype-text" style="color: #F4F4FD">Increase the flow of customers and sales for your business with
                 digital marketing & growth solutions.</p>
-            </div>
-            <div>
-                <p class="footer-text">Social media</p>
-                <ul class="social-media-list">
-                    <li class="social-list-li">
-                                     <a href="" class="social-menu-links">
-                                        <svg  class="social-svg" width="24" height="24">
-                                            <use href="./images/icons.svg#icon-instagram"></use>
-                                        </svg>
-                                         </a>
-                                   </li>
-                                   <li class="social-list-li">
-                                       <a href="" class="social-menu-links">
-                                         <svg  class="social-svg" width="24" height="24">
-                                            <use href="./images/icons.svg#icon-twitter"></use>
-                                        </svg>
-                                            </a>
-                                        </li>
-                                       <li class="social-list-li">
-                                          <a href="" class="social-menu-links">
-                                         <svg  class="social-svg" width="24" height="24">
-                                            <use href="./images/icons.svg#icon-facebook"></use>
-                                        </svg>
-                                               </a>
-                                            </li>
-                                           <li class="social-list-li">
-                                               <a href="" class="social-menu-links">
-                                         <svg  class="social-svg" width="24" height="24">
-                                            <use href="./images/icons.svg#icon-linkedin"></use>
-                                        </svg>
-                                      </a>
-                </ul>
-            </div>
         </div>
-    </footer>
+        <div>
+            <p class="footer-text">Social media</p>
+            <ul class="social-media-list">
+                <li class="social-list-li">
+                    <a href="" class="social-menu-links">
+                        <svg class="social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-li">
+                    <a href="" class="social-menu-links">
+                        <svg class="social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-li">
+                    <a href="" class="social-menu-links">
+                        <svg class="social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="social-list-li">
+                    <a href="" class="social-menu-links">
+                        <svg class="social-svg" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+        <div class="subscribe-div">
+            <p class="subscribe-text">Subscribe</p>
+            <form class="footer-form">
+                <label class="footer-label">
+                    <input class="subscribe-input" name="footer-input" type="email" placeholder="E-mail" style="color: #ffffff">
+                </label>
+                <button class="form-button" type="submit">
+                    Subscribe
+                    <svg class="form-svg" width="24" height="24">
+                        <use class="form-use" href="./images/icons.svg#icon-frame"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
+    </div>
+</footer>
+<div class="modal-div">
+    <div class="modal-window">
+        <button class="modal-button" type="button">
+            <svg class="modal-svg" width="8" height="8">
+                <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+        <form>
+            <div class="form-div">
+                <label class="form-label" for="user-name">Name</label>
+                <div class="input-div">
+                    <input id="user-name" name="user-name" type="text" class="user-input">
+                    <svg width="18" height="24" class="input-div-svg">
+                        <use href="./images/icons.svg#icon-person-black"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="form-div">
+                <label class="form-label" for="user-phone">Phone</label>
+                <div class="input-div">
+                    <input id="user-phone" name="user-phone" type="text" class="user-input">
+                    <svg width="18" height="24" class="input-div-svg">
+                        <use href="./images/icons.svg#icon-phone-black"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="form-div">
+                <label class="form-label" for="user-email">Email</label>
+                <div class="input-div">
+                    <input id="user-email" name="user-email" type="text" class="user-input">
+                    <svg width="18" height="24" class="input-div-svg">
+                        <use href="./images/icons.svg#icon-email-black"></use>
+                    </svg>
+                </div>
+            </div>
+            <div class="form-label-div">
+                <label class="form-label" for="user-comment">Comment</label>
+                <textarea id="user-comment" name="user-comment" placeholder="Text input" class="div-textarea"></textarea> 
+            </div>
+             <div class="form-input-div">
+                 <input  id="user-privacy" type="checkbox" value="true" name="user-privacy" class="privace-input visually-hidden">
+                 <label  for="user-privacy" class="label-privacy"> 
+                    <span class="label-span">
+                    <svg width="10" height="8" class="span-svg">
+                       <use href="./images/icons.svg#icons-checkbox"></use> 
+                    </svg>
+                     </span>
+                      I accept the terms and conditions of the
+                      <a href="/" class="label-link" style="color: #4d5ae5">Privacy Policy</a>
+                 </label>
+             </div>
+            <button class="submit-button">Send</button>
+        </form>
+    </div>
+</div>
 </body>
 
 </html>
