--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <main>
         <!-- HERO SECTION -->
-
+<!-- 
         <section class="section">
             <div class="container">
                 <h1 class="page-title">Effective Solutions for Your Business</h1>
@@ -439,7 +439,7 @@
             <button class="submit-button">Send</button>
         </form>
     </div>
-</div>
+<!-- </div> --> -->
 </body>
 
 </html>
