--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
                     </li>
                 </ul>
             </nav>
+            <button class="mobile-open-button">
+                <svg class="mobile-open-button-svg">
+                  <use class="mobile-open-button-icon" href></use>
+                </svg>
+            </button>
             <address class="address">
                 <ul class="menu-contact">
                     <li class="contact-list">
