--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a class="logotype" href="./index.html">
                     Web<span class="logotype-span">Studio</span>
                 </a>
-                <ul class="list-container">
+                <ul class="menu list-container">
                     <li class="nav-list">
                         <a class="menu-link current" href="./index.html">Studio</a>
                     </li>
