--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
             <button class="submit-button">Send</button>
         </form>
     </div>
-<!-- </div> --> -->
+<!-- </div> --> 
 </body>
 
 </html>
