--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </nav>
             <button class="mobile-open-button">
                 <svg class="mobile-open-button-svg">
-                  <use class="mobile-open-button-icon" href=""></use>
+                  <use class="mobile-open-button-icon" href="./images/icons.svg#icon-burger"></use>
                 </svg>
             </button>
             <address class="address">
