--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </ul>
             </nav>
             <button class="mobile-open-button">
-                <svg class="mobile-open-button-svg">
+                <svg class="mobile-open-button-svg" width="24" height="24">
                   <use class="mobile-open-button-icon" href="./images/icons.svg#icon-burger"></use>
                 </svg>
             </button>
