--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="page-header">
-        <div class="container display">
+        <div class="container page-header-container">
             <nav class="page-navigator">
                 <a class="logotype" href="./index.html">
                     Web<span class="logotype-span">Studio</span>
