--- a/index.html
+++ b/index.html
@@ -447,6 +447,11 @@
 <!-- </div> --> 
         <div class="mobile-menu"> 
          <div class="container mobile-menu-container">
+             <button class="mobile-menu-close-button">
+                 <svg class"mobile-menu-close-button-svg" width="24" height="24">
+                 <use class=mobile-menu-close-button-use href="./images/icons.svg"></use>
+                 </svg>
+             </button>
           <nav>
                  <a class="menu-link current" href="./index.html">Studio</a>
                 <a class="menu-link" href="">Portfolio</a>
