--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@
          <div class="container mobile-menu-container">
              <button class="mobile-menu-close-button">
                  <svg class"mobile-menu-close-button-svg" width="24" height="24">
-                 <use class=mobile-menu-close-button-use href="./images/icons.svg"></use>
+                 <use class=mobile-menu-close-button-use href="./images/icons.svg#icon-close-black"></use>
                  </svg>
              </button>
           <nav>
