--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <main>
         <!-- HERO SECTION -->
 <!-- 
-        <section class="section">
+<!--         <section class="section">
             <div class="container">
-                <h1 class="page-title">Effective Solutions for Your Business</h1>
-                <button type="button" class="button">Order Service</button>
+              <h1 class="page-title">Effective Solutions for Your Business</h1>
+              <button type="button" class="button">Order Service</button>
             </div>
-        </section>
-        <section class="second-section">
+        </section>     -->
+<!--         <section class="second-section">
             <div class="container display">
                 <h2 class="visually-hidden">Benefits</h2>
                 <ul class="section-list">
@@ -107,8 +107,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="third-section">
+        </section> -->
+<!--         <section class="third-section">
             <div class="container">
                 <h2 class="subtitle">Our Team</h2>
                 <ul class="section-list">
@@ -262,8 +262,8 @@
                     </li>
                 </ul>
             </div>
-        </section>
-        <section class="fourth-section">
+        </section> -->
+<!--         <section class="fourth-section">
             <div class="container">
                 <h2 class="subtitle">Our Portfolio</h2>
                 <ul class="fourth-section-list">
@@ -329,9 +329,9 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
-    <footer class="page-footer">
+<!--     <footer class="page-footer">
     <div class="container flex">
         <div class="footer-div">
             <a class="second-logotype second-class" href="./index.html">
@@ -388,8 +388,8 @@
             </form>
         </div>
     </div>
-</footer>
-<div class="modal-div">
+</footer> -->
+<!-- <div class="modal-div">
     <div class="modal-window">
         <button class="modal-button" type="button">
             <svg class="modal-svg" width="8" height="8">
@@ -407,7 +407,7 @@
                     </svg>
                 </div>
             </div>
-            <div class="form-div">
+           <div class="form-div">
                 <label class="form-label" for="user-phone">Phone</label>
                 <div class="input-div">
                     <input id="user-phone" name="user-phone" type="text" class="user-input">
@@ -444,7 +444,7 @@
             <button class="submit-button">Send</button>
         </form>
     </div>
-<!-- </div> --> 
+</div>   -->
         <div class="mobile-menu"> 
          <div class="container mobile-menu-container">
              <button class="mobile-menu-close-button">
