--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </header>
     <main>
         <!-- HERO SECTION -->
-<!-- 
+        
 <!--         <section class="section">
             <div class="container">
               <h1 class="page-title">Effective Solutions for Your Business</h1>
@@ -448,7 +448,7 @@
         <div class="mobile-menu"> 
          <div class="container mobile-menu-container">
              <button class="mobile-menu-close-button">
-                 <svg class"mobile-menu-close-button-icon-svg" width="24" height="24">
+                 <svg class="mobile-menu-close-button-icon-svg" width="24" height="24">
                  <use class=mobile-menu-close-button-use href="./images/icons.svg#icon-close-black"></use>
                  </svg>
              </button>
