--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         <h3 class="reviews-section-li-title">John Wax</h3>
         <p class="reviews-section-li-text">I rented the Lagoon 620 with my family for a week-long vacation and it was the best decision ever. The yacht was spacious, comfortable, and luxurious, and the crew took care of everything. </p>
        </div>
-    </li class="reviews-section-li">
+    </li>
+    <li class="reviews-section-li">
        <img srcset="./images/section-reviews-2.jpg, ./images/section-reviews-2@2x.jpg"
        alt="img" 
        width="56" 
