--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     />
   </head>
 <section class="reviews">
- <div class="container">
+ <div class="section-text-container container">
   <div class="reviews-title-container">
    <h2 class="reviews-title">YachtJet take pride in providing the best possible service and experience to our customers</h2>
    <p class="reviews-text">Our customers have enjoyed unforgettable moments on our yachts. Don't just take our word for it - read on to find out what they have to say about their journey with us.</p>
