--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <img srcset="./images/section-reviews-1.jpg, ./images/section-reviews-1@2x.jpg"
        alt="img" 
        width="56" 
-       class="img">
+       class="img-1">
        <div class="reviews-section-li-text-container">
         <h3 class="reviews-section-li-title">John Wax</h3>
         <p class="reviews-section-li-text">I rented the Lagoon 620 with my family for a week-long vacation and it was the best decision ever. The yacht was spacious, comfortable, and luxurious, and the crew took care of everything. </p>
@@ -37,7 +37,7 @@
        <img srcset="./images/section-reviews-2.jpg, ./images/section-reviews-2@2x.jpg"
        alt="img" 
        width="56" 
-       class="img">
+       class="img-2">
        <div class="reviews-section-li-text-container">
          <h3 class="reviews-section-li-title">Victoria Romashenko</h3>
          <p class="reviews-section-li-text">The Sunseeker Manhattan 66 was the perfect choice for our romantic getaway. The yacht was beautifully designed, with all the amenities we needed, and the crew was attentive and friendly. </p>
@@ -47,7 +47,7 @@
        <img srcset="./images/section-reviews-3.jpg, ./images/section-reviews-3@2x.jpg"
        alt="img" 
        width="56" 
-       class="img">
+       class="img-3">
        <div class="reviews-section-li-text-container">
          <h3 class="reviews-section-li-title">Ihor Trachuk</h3>
          <p class="reviews-section-li-text">The Azimut 80 was the most luxurious yacht I've ever been on. The cabins were spacious and elegant, and the outdoor areas were perfect for relaxing and entertaining. Worth every penny!</p>
