--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <p class="reviews-section-li-text">I rented the Lagoon 620 with my family for a week-long vacation and it was the best decision ever. The yacht was spacious, comfortable, and luxurious, and the crew took care of everything. </p>
        </div>
     </li>
-    <li class="reviews-section-li">
+    <li class="reviews-section-li-2">
        <img srcset="./images/section-reviews-2.jpg, ./images/section-reviews-2@2x.jpg"
        alt="img" 
        width="56" 
@@ -43,7 +43,7 @@
          <p class="reviews-section-li-text">The Sunseeker Manhattan 66 was the perfect choice for our romantic getaway. The yacht was beautifully designed, with all the amenities we needed, and the crew was attentive and friendly. </p>
        </div>
       </li>
-     <li class="reviews-section-li">
+     <li class="reviews-section-li-3">
        <img srcset="./images/section-reviews-3.jpg, ./images/section-reviews-3@2x.jpg"
        alt="img" 
        width="56" 
