--- a/index.html
+++ b/index.html
@@ -40,5 +40,7 @@
   </li>
 </ul>
     <ul class="gallery"></ul>
+    input type="text" id="name-input" placeholder="Please enter your name" />
+<h1>Hello, <span id="name-output">Anonymous</span>!</h1>
 </body>
 </html>
