--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
        <script src="./js/task-2.js"></script>
        <script src="./js/task-3.js"></script>
        <script src="./js/task-4.js"></script>
+      <script src="./js/task-5.js"></script>
     <ul id="categories">
   <li class="item">
     <h2>Animals</h2>
@@ -53,6 +54,10 @@
   </label>
   <button type="submit">Log in</button>
 </form>
+    <div class="widget">
+  <p>Background color: <span class="color">-</span></p>
+  <button type="button" class="change-color">Change color</button>
+</div>
 
 </body>
 </html>
