--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
   <p>Background color: <span class="color">-</span></p>
   <button type="button" class="change-color">Change color</button>
 </div>
+    <div id="controls">
+  <input type="number" min="1" max="100" step="1" />
+  <button type="button" data-create>Create</button>
+  <button type="button" data-destroy>Destroy</button>
+</div>
+
+<div id="boxes"></div>
+
 
 </body>
 </html>
