--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
        <script src="./js/task-3.js"></script>
        <script src="./js/task-4.js"></script>
       <script src="./js/task-5.js"></script>
+     <script src="./js/task-6.js"></script>
     <ul id="categories">
   <li class="item">
     <h2>Animals</h2>
