--- a/index.html
+++ b/index.html
@@ -12,7 +12,13 @@
        <script src="./js/task-4.js"></script>
       <script src="./js/task-5.js"></script>
      <script src="./js/task-6.js"></script>
-   
+    
+      <load src="partials/task-1.html" />
+      <load src="partials/task-2.html" />
+      <load src="partials/task-3" />
+      <load src="partials/task-4" />
+      <load src="partials/task-5" />
+    <load src="partials/task-6" />
 
 </body>
 </html>
