--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
       <script src="./js/task-5.js"></script>
      <script src="./js/task-6.js"></script>
     
-      <load src="partials/task-1.html" />
-      <load src="partials/task-2.html" />
-      <load src="partials/task-3" />
-      <load src="partials/task-4" />
-      <load src="partials/task-5" />
-    <load src="partials/task-6" />
+      <a href="partials/task-1.html" />
+      <a href="partials/task-2.html" />
+      <a href="partials/task-3.html" />
+      <a href="partials/task-4.html" />
+      <a href="partials/task-5.html" />
+    <a href="partials/task-6.html" />
 
 </body>
 </html>
