--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Document</title>
 </head>
 <body>    
-      <a href="./index/task-1.html">Tack 1</a>
-      <a href="./index/task-2.html">Tack 2 </a>
-      <a href="./index/task-3.html">Tack 3 </a>
-      <a href="./index/task-4.html">Tack 4 </a>
-      <a href="./index/task-5.html">Tack 5 </a>
-      <a href="./index/task-6.html">Tack 6</a>
+      <a href="./task-1.html">Tack 1</a>
+      <a href="./task-2.html">Tack 2 </a>
+      <a href="./task-3.html">Tack 3 </a>
+      <a href="./task-4.html">Tack 4 </a>
+      <a href="./task-5.html">Tack 5 </a>
+      <a href="./task-6.html">Tack 6</a>
      <script src="./js/task-1.js"></script>
        <script src="./js/task-2.js"></script>
        <script src="./js/task-3.js"></script>
