--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>    
-      <a href="./task-1.html">Tack 1</a>
+      <a href="./task-1.html"></a>
       <a href="./task-2.html">Tack 2 </a>
       <a href="./task-3.html">Tack 3 </a>
       <a href="./task-4.html">Tack 4 </a>
