--- a/task-5.html
+++ b/task-5.html
@@ -2,4 +2,7 @@
   <p>Background color: <span class="color">-</span></p>
   <button type="button" class="change-color">Change color</button>
 </div>
+<div>
+    <a href="./js/task-5.js"></a>
+  </div>
 
