--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
-      <link rel="stylesheet" href="./css/styles.css" />
-      <link rel="stylesheet" href="./css/styles.css" />
-      <link rel="stylesheet" href="./css/styles.css" />
+      <link rel="stylesheet" href="./css/header.css" />
+      <link rel="stylesheet" href="./css/reset.css" />
+      <link rel="stylesheet" href="./css/vite-promo.css" />
   
 
 </head>
