--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/reset.css" />
+  <title>JS-HW-09</title>
 </head>
-
 <body>
-    <ul>
-      <li><a href="./1-gallery.html">Task 1</a></li>
-      <li><a href="./2-form.html">Task 2</a></li>
-    </ul>
-
-    <!-- <load ="partials/header.html" /> -->
-
-    <!-- <section>
-      <h1>Example page title</h1>
-      Path to images as from index.html file
-      <img src="./img/javascript.svg" alt="" />
-    </section> -->
-
-    <!-- Loads the specified .html file -->
-    <load="partials/vite-promo.html" />
-
-
-    <script type="module" src="./main.js"></script>
+  <li><a class="link-nav" href="1-gallery.html">Gallery</a></li>
+  <li><a class="link-nav"  href="2-form.html">Form</a></li>
 </body>
-
 </html>
