--- a/src/2-form.html
+++ b/src/2-form.html
@@ -1,29 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/2-form.css" />
+    <title>JS-HW-09-FORM</title>
 </head>
-
 <body>
-    <p><a href="./index.html">go back</a></p>
+    <p><a href="./index.html">Go back</a></p>
 
     <form class="feedback-form" autocomplete="off">
         <label>
-            Email
-            <input type="email" name="email" autofocus />
+          Email
+          <input type="email" name="email" autofocus />
         </label>
         <label>
-            Message
-            <textarea name="message" rows="8"></textarea>
+          Message
+          <textarea name="message"  rows="10"></textarea>
         </label>
         <button type="submit">Submit</button>
-    </form>
-
-    <script type="module" src="./js/2-form.js"></script>
-</body>
-
+      </form>
+      <script src="./js/2-form.js" type="module"></script>
+</body>      
 </html>
