--- a/src/index.html
+++ b/src/index.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>HW-10</title>
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
-
-<body>
+  </head>
+  <body>
     <ul>
-      <li><a href="./1-gallery.html">Task 1</a></li>
-      <li><a href="./2-form.html">Task 2</a></li>
+      <li><a href="./1-timer.html">TIMER</a></li>
+      <li><a href="./2-snackbar.html">SNACKBAR</a></li>
     </ul>
-
-    <!-- <load ="partials/header.html" /> -->
-
-    <!-- <section>
-      <h1>Example page title</h1>
-      Path to images as from index.html file
-      <img src="./img/javascript.svg" alt="" />
-    </section> -->
-
-    <!-- Loads the specified .html file -->
-    <load="partials/vite-promo.html" />
-
-
-    <script type="module" src="./main.js"></script>
-</body>
-
+  </body>
 </html>
