--- a/src/index.html
+++ b/src/index.html
@@ -4,33 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HW-10</title>
+    <title>Vanilla App Template</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <ul>
-      <li><a href="./1-timer.html">TIMER</a></li>
-      <li><a href="./2-snackbar.html">SNACKBAR</a></li>
-    </ul>
-  </body>
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./css/reset.css" />
-  <title>JS-HW-09</title>
-</head>
-<body>
-  <li><a class="link-nav" href="1-gallery.html">Gallery</a></li>
-  <li><a class="link-nav"  href="2-form.html">Form</a></li>
-</body>
+    <!-- <load ="partials/header.html" /> -->
 
+    <a href="./1-timer.html" class ="pagelink">timer</a>
+    <a href="./2-snackbar.html" class ="pagelink">snackbar</a>
+
+    <!-- <section>
+      <h1>Example page title</h1>
+       Path to images as from index.html file -->
+      <!-- <img src="./img/javascript.svg" alt="" />
+    </section>  -->
+
+    <!-- Loads the specified .html file -->
+    <load ="partials/vite-promo.html" />
+
+    <script type="module" src="./main.js"></script>
+  </body>
 </html>
