--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -1,40 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
-    <title>hw10</title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Timer</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css" />
 </head>
+
 <body>
-    <a href="./index.html" class ="pagelink">back up</a>
+    <section>
+        <ul>
+            <li><a class="text-link" href="./index.html">Home</a></li>
+        </ul>
+        <div class="timer-box">
+            <input type="text" id="datetime-picker" />
+            <button class="btn-timer" type="button" data-start>Start</button>
 
-    <div class="input-block">
-        <input type="text" id="datetime-picker" />
-        <button type="button"  data-start>Start</button>
-        
-        <div class="timer">
-          <div class="field">
-            <span class="value" data-days>00</span>
-            <span class="label">Days</span>
-          </div>
-          <div class="field">
-            <span class="value" data-hours>00</span>
-            <span class="label">Hours</span>
-          </div>
-          <div class="field">
-            <span class="value" data-minutes>00</span>
-            <span class="label">Minutes</span>
-          </div>
-          <div class="field">
-            <span class="value" data-seconds>00</span>
-            <span class="label">Seconds</span>
-          </div>
+            <div class="timer">
+                <div class="field">
+                    <span class="value" data-days>00</span>
+                    <span class="label">DAYS</span>
+                </div>
+                <div class="field">
+                    <span class="value" data-hours>00</span>
+                    <span class="label">HOURS</span>
+                </div>
+                <div class="field">
+                    <span class="value" data-minutes>00</span>
+                    <span class="label">MINUTES</span>
+                </div>
+                <div class="field">
+                    <span class="value" data-seconds>00</span>
+                    <span class="label">SECONDS</span>
+                </div>
+            </div>
         </div>
-    </div>
 
- 
-    <script type="module" src="./js/1-timer.js"></script>   
 
+    </section>
+    <script src="./js/1-timer.js" type="module"></script>
 </body>
+
 </html>
