--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
-  </head>
-  <body>
-    <!-- <load ="partials/header.html" /> -->
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title> Homework 10</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
+  <link rel="stylesheet" href="./css/styles.css" />
+</head>
 
-    <a href="./1-timer.html" class ="pagelink">timer</a>
-    <a href="./2-snackbar.html" class ="pagelink">snackbar</a>
+<body>
+  
+  <section>
+    <ul>
+      <li><a class="text-link" href="./1-timer.html">Timer</a></li>
+      <li><a class="text-link" href="./2-snackbar.html">Snackbar</a></li>
+    </ul>
+  </section>
+</body>
 
-    <!-- <section>
-      <h1>Example page title</h1>
-       Path to images as from index.html file -->
-      <!-- <img src="./img/javascript.svg" alt="" />
-    </section>  -->
-
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
-
-    <script type="module" src="./main.js"></script>
-  </body>
 </html>
