--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -1,50 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Snackbar</title>
-    <link rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital@0;1&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,600;1,600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,700;1,700&display=swap"
+      rel="stylesheet"
+    />
+    <title>JS-HW-10-SNACKBAR</title>
     <link rel="stylesheet" href="./css/styles.css" />
-</head>
+  </head>
+  <body>
+    <form class="form">
+      <label class="delay">
+        Delay (ms)
+        <input class="input-delay" type="number" name="delay" required />
+      </label>
 
-<body>
-    <section>
-        <ul>
-            <li><a class="text-link" href="./index.html">Home</a></li>
-        </ul>
-        <form class="form">
+      <fieldset>
+        <legend>State</legend>
+        <label class="fulfilled">
+          <input type="radio" name="state" value="fulfilled" required />
+          Fulfilled
+        </label>
+        <label class="rejected">
+          <input type="radio" name="state" value="rejected" required />
+          Rejected
+        </label>
+      </fieldset>
 
-            <label>
-                Delay (ms)
-                <input type="number" name="delay" required />
-            </label>
-
-            <fieldset>
-                <legend>State</legend>
-                <label>
-                    <input type="radio" name="state" value="fulfilled" required />
-                    Fulfilled
-                </label>
-                <label>
-                    <input type="radio" name="state" value="rejected" required />
-                    Rejected
-                </label>
-            </fieldset>
-
-            <button type="submit">Create notification</button>
-        </form>
-
-
-    </section>
-    <script src="./js/2-snackbar.js" type="module"></script>
-</body>
-
+      <button class="create-notification" type="submit">
+        Create notification
+      </button>
+    </form>
+    <script type="module" src="./js/2-snackbar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/izitoast/1.4.0/js/iziToast.min.js"></script>
+  </body>
 </html>
