--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100..900&display=swap"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./css/styles.css" />
+    <script type="module" src="./main.js"></script>
+    <title>Gallery</title>
   </head>
   <body>
     <form class="search-form">
-      <input type="text" name="search" />
-      <button class="search-button" type="submit">Start</button>
+      <input
+        class="search-input"
+        type="text"
+        name="search"
+        placeholder="Search images..."
+      />
+      <button class="btn-search" type="submit">Search</button>
     </form>
-    <ul class="list"></ul>
-    <span class="loading"></span>
-    <script type="module" src="./main.js"></script>
+    <ul class="gallery"></ul>
+    <button type="button" class="load">Load more</button>
+    <div class="loader" hidden></div>
   </body>
 </html>
